# swagger/handlers/user.go
@@ -194,7 +194,7 @@ func (c User) GetUserById() users.GetUserHandlerFunc {
 			PassportIssueDate: &passportDate,
 			PassportNumber:    user.PassportNumber,
 			PassportSeries:    user.PassportSeries,
-			Patronomic:        user.Patronymic,
+			Patronymic:        user.Patronymic,
 			PhoneNumber:       user.Phone,
 			Role:              &role,
 			Surname:           user.Surname,
@@ -233,7 +233,7 @@ func (c User) GetUsersList() users.GetAllUsersHandlerFunc {
 				PassportIssueDate: &passportDate,
 				PassportNumber:    element.PassportNumber,
 				PassportSeries:    element.PassportSeries,
-				Patronomic:        element.Patronymic,
+				Patronymic:        element.Patronymic,
 				PhoneNumber:       element.Phone,
 				Role:              &role,
 				Surname:           element.Surname,
